# SuperHallArray

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  HallArray.c
